<resources>
    <string name="app_name">My Digimind</string>
    <string name="title_my_board">My board</string>
    <string name="title_add">New Reminder</string>
    <string name="reminder_name">What do you want to remember?</string>
    <string name="when">When do you want to do it?</string>
    <string name="time">At what time?</string>
    <string name="done">Done</string>
    <string name="s">Sunday</string>
    <string name="m">Monday</string>
    <string name="tu">Tuesday</string>
    <string name="w">Wednesday</string>
    <string name="thu">Thursday</string>
    <string name="f">Friday</string>
    <string name="sa">Saturday</string>


</resources>